First run basically working, although to slow in single threaded mode to use for indexing a large number of pages

--- a/tagalyzer-api/pom.xml
+++ b/tagalyzer-api/pom.xml
@@ -35,6 +35,16 @@
         <artifactId>littleproxy</artifactId>
         <version>1.0.0-beta7</version>
     </dependency>
+     <dependency>
+        <groupId>edu.uci.ics</groupId>
+        <artifactId>crawler4j</artifactId>
+        <version>4.1</version>
+    </dependency>
+<dependency>
+	<groupId>org.xerial</groupId>
+	<artifactId>sqlite-jdbc</artifactId>
+	<version>3.8.10.1</version>
+</dependency>
   </dependencies>
   
 <reporting>
